ci: 정적분석 게이트를 세운다 (2e)
SpotBugs 와 gitleaks. 백엔드에 버그 패턴 검출기가 하나도 없었고
-Xlint 는 컴파일러 경고지 정적분석이 아니다.

측정을 먼저 하고 문턱을 정했다. D25 가 요구하는 순서고, 안 그러면
이 청크가 D25 를 앞질러 임의로 정하는 자리가 된다.

첫 측정 100건의 분포가 결론을 뒤집었다. 96건이 record DTO 에서
구조적으로 나는 EI_EXPOSE_REP 이고, 남는 넷을 실물로 열어 보니
고칠 것이 0건이었다. 그래서 기준선 파일을 안 만들고 게이트를 바로
켰다. 예보는 「기준선으로 눌러 두고 새 것만」이었다.

오탐 둘이 진짜 코드를 지키고 있었다. InquiryQuery 의 \n 은 텍스트
블록 SQL 이라 %n 으로 바꾸면 SQL 이 플랫폼마다 갈리고,
OrderStatusService 의 null 검사는 delivered_at 이 nullable 이라
지우면 배송 전 주문에서 진짜 NPE 가 난다.

제외 범위를 좁혔다. 유형을 통째로 빼면 앞으로 생길 것까지 숨는다.
구조적인 첫째만 전역이고 나머지 셋은 메서드까지 좁혔다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017cGSetn6sdC5euWaDSYbnZ